--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     ],
 
     "require": {
-        "leblanc-simon/parsedown-checkbox": "~0.0.1"
+        "leblanc-simon/parsedown-checkbox": "~0.0.1",
+        "ext-json": "*"
     }
 }
